deploy/src/Microsoft.Azure.IIoT.Deployment/Resources/aks/22_industrial_iot_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: industrial-iot-ingress
  namespace: industrial-iot
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - kktestapp10.azurewebsites.net
    # secretName: web-app
    secretName: web-app
  rules:
  - http:
      paths:
      - path: /registry/(.*)
        backend:
          serviceName: registry-service
          servicePort: 9042
      - path: /twin/(.*)
        backend:
          serviceName: twin-service
          servicePort: 9041
      - path: /history/(.*)
        backend:
          serviceName: history-service
          servicePort: 9043
      - path: /ua/(.*)
        backend:
          serviceName: gateway-service
          servicePort: 9040
      - path: /vault/(.*)
        backend:
          serviceName: vault-service
          servicePort: 9044
